# Cropto

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
api/: fast_api.py  functions.py  main.py  pyproject.toml  readme.md
api/model/: best_model_info.json  crop_success.csv  crop_sucess.ipynb  label_mappings.json  model.pkl
app/: data.server.tsx  root.tsx  tailwind.css
app/common/: Header.tsx
app/components/: ThemeToggle.tsx
app/context/: ThemeContext.tsx
app/routes/: _index.tsx  crop.tsx
